// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Boat /> should render 1`] = `
<div
  className="boat boat_position_left"
  onAnimationEnd={[Function]}
  onTransitionEnd={[Function]}
/>
`;

exports[`<Boat /> should render items 1`] = `
<div
  className="boat boat_position_left"
  onAnimationEnd={[Function]}
  onTransitionEnd={[Function]}
>
  <div
    className="boat__character"
  >
    <button
      className="character character_skin_sheep character_packed"
      onClick={[Function]}
      title="sheep"
    />
  </div>
  <div
    className="boat__character"
  >
    <button
      className="character character_skin_farmer character_packed"
      onClick={[Function]}
      title="farmer"
    />
  </div>
</div>
`;
